# vocode-next-template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
api/: environment.docker.yml  index.py  pyproject.toml
docker/etc/supervisor/: supervisord.conf
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AudioVisualizer.client.tsx  BottomNavBar.tsx  PingComponent.tsx  VocodeApp.client.tsx  audio-visualizer.tsx  bottom-nav-bar.tsx  vocode-app.tsx
src/components/app/: globals.css  layout.tsx  page.tsx
src/components/app/DialogDeal/: page.tsx
src/components/app/aimeetup/: page.tsx
src/components/app/andean-oasis/: page.tsx
src/components/app/andean-oasis/es/: AndeanHealth.module.css
src/components/app/custom/: page.tsx
src/components/app/english-tutor/: EnglishTutor.module.css  page.tsx
src/components/app/es/: page.tsx
src/components/app/info/: page.tsx
src/components/app/investment-memo/: page.tsx
src/components/app/op-qa-exec-assist/: page.tsx
src/components/app/op-qa-exec-assist/es/: page.tsx
src/components/app/pqr/santabraza/: SantaBraza.module.css  page.tsx
src/components/app/pqr/santabraza/es/: page.tsx
src/components/app/sarosh/: page.tsx
src/components/app/supabase-vocode/: page.tsx
src/components/app/usb/: page.tsx
